<resources>
    <string name="app_name">Find My Android</string>
    <string name="loginText">Login</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="rememberCheckBoxText">Remember Login</string>
    <string name="loginButtonText">Login</string>
    <string name="signupText">Sign Up</string>
    <string name="orText">Or</string>
    <string name="passwordCheckHint">Confirm Password</string>
    <string name="createNewButton">Create New Account</string>
    <string name="title_activity_center">Center</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device_list">DeviceList</string>
    <string name="title_activity_devices">Devices</string>
    <string name="refreshbutton">refreshbutton</string>
   <string name="gcm_defaultSenderID">195528134000</string>
    <string name="submitButton">Submit</string>
    <string name="welcome">Loading...</string>
    <string name="between_login_devicelist">ca-app-pub-7659357262469619/2566761284</string>
    <string name="between_devicelist_moinfo">ca-app-pub-7659357262469619/8334093285</string>
    <string name="top_moinfo">ca-app-pub-7659357262469619/9810826484</string>

</resources>
