<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.nofool.dev.tbd.Login"
    android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loginText"
        android:id="@+id/loginTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:layout_row="1"
        android:layout_column="0"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_row="2"
        android:layout_column="0"
        android:hint="@string/passwordHint"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:gravity="center_horizontal" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberCheckBoxText"
        android:id="@+id/rememberCheckBox"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        android:id="@+id/loginButton"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="center_horizontal" />
</GridLayout>
