<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.nofool.dev.tbd.Registration">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailEditText"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal|center_horizontal"
        android:hint="@string/emailHint"
        android:gravity="center_horizontal"
        android:layout_margin="8dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordFieldEditText"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal|center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/passwordHint"
        android:layout_margin="8dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordCheckEditText"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal|center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/passwordCheckHint"
        android:layout_margin="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupText"
        android:id="@+id/registerButton"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"/>
</GridLayout>
